--- a/Config/CGPconfigV1.yaml
+++ b/Config/CGPconfigV1.yaml
@@ -1,10 +1,10 @@
-# CGPAgent.jl settings
+# Cambrian.jl settings
 d_fitness: 1
-n_population: 20
+n_population: 10
 n_elite: 1
-n_gen: 15
+n_gen: 30
 log_gen: 1
-save_gen: 10
+save_gen: 5
 m_rate: 0.1
 # MTCGP.jl settings
 rows: 3
