--- a/Project.toml
+++ b/Project.toml
@@ -3,3 +3,4 @@ ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+NEAT = "2ec0002f-e4a1-4800-bcee-0ea66feeae55"
